# py2cpp

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.py
example/: result.cpp  result_with_comment.cpp
py2cpp/: __init__.py  expression.py  funcarg.py  ops.py  statement.py  transpile.py  type_system.py
